--- a/app.css
+++ b/app.css
@@ -26,6 +26,9 @@ body {
     flex-flow: wrap;
     justify-content: center;
 }
+.destination:hover h2 {
+    transform: rotate(0deg);
+}
 
 .destination {
     background: #03a9f4;
@@ -42,6 +45,7 @@ body {
 
 h2 {
     margin: 0;
+     transition: transform 0.5s;
     transform: rotate(-45deg);
     text-shadow: 0 0 5px #01579b;
 }
